# Embedded-Intent-Recognizer

./: .gitignore  CMakeLists.txt  README.md
parameters/: parameters.txt
src/: CMakeLists.txt  Recognition.cpp  Recognition.h  Recognition_Driver.cpp  Recognition_Driver.h  main.cpp  utilities.h
test/: CMakeLists.txt  intent_recognizer_test.cpp
