include_directories(../src)
file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
set(SOURCES ${TEST_SOURCES})
add_executable(${CMAKE_PROJECT_NAME}_test ${TEST_SOURCES})
add_test(NAME ${CMAKE_PROJECT_NAME}_test COMMAND ${CMAKE_PROJECT_NAME}_test)
target_link_libraries(${CMAKE_PROJECT_NAME}_test PUBLIC gtest ${CMAKE_PROJECT_NAME}_lib)
